--- a/src/app/core/main/main.component.html
+++ b/src/app/core/main/main.component.html
@@ -1,20 +1,24 @@
 <div class="card-warpper">
     <div class="card-container">
-        <mat-card class="card" *ngFor="let fruit of allFruits;index as i;">
+        <mat-card #card class="card" *ngFor="let fruit of allFruits;index as i;">
             <mat-card-header>
-                <mat-card-title>{{fruit.Name}}</mat-card-title>
+                <mat-card-title>{{fruit.name}}</mat-card-title>
             </mat-card-header>
-            <img mat-card-image src="\assets\img\{{fruit.Name}}.jpg" alt="Photo of a Shiba Inu">
+            <img mat-card-image src="\assets\img\{{fruit.name}}.jpg" alt="Photo of a fruit">
             <mat-card-content>
+                <span>
+                    <h2>Price: {{fruit.price}}$</h2>
+                    <h3>{{fruit.quantity}} left</h3>
+                </span>
                 <p>
-                    The Best and the juicest {{fruit.Name}} in the world. That came directly from the Farm number {{i +
+                    The Best and the juicest {{fruit.name}} in the world. That came directly from the Farm number {{i +
                     1}}!!
                 </p>
                 <mat-divider></mat-divider>
             </mat-card-content>
             <mat-card-actions>
-                <button mat-raised-button color="primary">Buy Now</button>
-                <button mat-button>Add To Cart</button>
+                <button [disabled]="fruit.quantity == 0" mat-raised-button color="primary">Buy Now</button>
+                <button [disabled]="fruit.quantity == 0" mat-button (click)="addCart(fruit)">Add To Cart</button>
             </mat-card-actions>
         </mat-card>
     </div>
