--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container>
-    <mat-drawer #drawer class="sidenav" mode="over" opened="true" position="end">
+    <mat-drawer #drawer class="sidenav" mode="over" position="end">
         <app-cart></app-cart>
     </mat-drawer>
 
