--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-drawer-container>
     <mat-drawer #drawer class="sidenav" mode="over" position="end">
-        <app-cart></app-cart>
+        <app-cart (cartButtonClick)="drawer.close()"></app-cart>
     </mat-drawer>
 
     <div class="sidenav-content">
