--- a/src/app/core/cart/cart.component.css
+++ b/src/app/core/cart/cart.component.css
@@ -9,7 +9,8 @@
     color: rgba(0, 0, 0);
 }
 
-h1 {
+h1,
+h3 {
     font-family: 'Trispace';
 }
 
@@ -18,10 +19,33 @@ mat-list>div {
     text-transform: capitalize;
 }
 
+.header {
+    font-size: 1.5rem;
+}
+
+.item {
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.item-details {
+    padding: 0 10px;
+}
+
+.item-details>.item-title {
+    font-size: 1.3rem;
+}
+
+.item-details>.item-title>div {
+    font-size: 1rem;
+}
+
 mat-icon:hover {
     border-radius: 50%;
     cursor: pointer;
 }
+
 
 .sum {
     padding: 10px;
