--- a/src/app/core/handler/handler.component.css
+++ b/src/app/core/handler/handler.component.css
@@ -1,17 +1,25 @@
 .container {
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: 'Trispace' !important;
+
 }
 
 .container h1 {
+    color: #EB455F;
     font-size: 4rem;
+    font-family: 'Trispace' !important;
 }
 
 .container h3 {
     font-size: 2rem;
+    font-family: 'Trispace' !important;
+}
+
+.container button {
+    margin: 10px;
+    font-family: 'Trispace' !important;
 }
