--- a/src/app/core/handler/handler.component.html
+++ b/src/app/core/handler/handler.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-    <h1>{{params.title}}</h1>
+    <h1>Error was Encountered!!</h1>
     <h3>{{params.message}}</h3>
     <span>
-        <button mat-raised-button color="primary" (click)="accept()">Retry/Login</button>
+        <button mat-raised-button color="primary" (click)="accept()">{{buttonText}}</button>
         <button mat-button>Cancel</button>
     </span>
 </div>
